# ChangeLog for net-nds/yp-tools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/yp-tools/ChangeLog,v 1.38 2009/09/23 19:40:57 patrick Exp $

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> yp-tools-2.9.ebuild:
  Remove virtual/libc

  07 Jul 2009; Jeroen Roovers <jer@gentoo.org> -yp-tools-2.8.ebuild,
  -yp-tools-2.8-r1.ebuild:
  Remove old.

  07 Jul 2009; Jeroen Roovers <jer@gentoo.org> yp-tools-2.9.ebuild:
  Stable for HPPA too.

*yp-tools-2.9-r1 (07 Jul 2009)

  07 Jul 2009; Jeroen Roovers <jer@gentoo.org> +yp-tools-2.9-r1.ebuild,
  +files/yp-tools-2.9-strip.patch:
  Do not strip. Use emake instead of make. Use rm -f instead of rm -d (one
  command execution instead of three). Remove stupid DEPEND.

  02 Nov 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Whitespace.

  02 Nov 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml, yp-tools-2.8.ebuild:
  Removing eradicator as a maintainer since he was retired. Quoted some
  vars.

  27 Jul 2007; Raúl Porcel <armin76@gentoo.org> yp-tools-2.9.ebuild:
  alpha stable

  12 Jun 2007; Jeroen Roovers <jer@gentoo.org> yp-tools-2.9.ebuild:
  Marked ~hppa (bug #181672).

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  04 Apr 2006; Aron Griffis <agriffis@gentoo.org> yp-tools-2.9.ebuild:
  Mark 2.9 stable on ia64

  31 Mar 2006; Michael Hanselmann <hansmi@gentoo.org> yp-tools-2.9.ebuild:
  Stable on ppc.

  29 Mar 2006; Jeremy Huddleston <eradicator@gentoo.org>
  yp-tools-2.9.ebuild:
  Stable on amd64, ppc64, sparc, and x86.

  19 Feb 2006; Joshua Kinard <kumba@gentoo.org> yp-tools-2.9.ebuild:
  Added ~mips to KEYWORDS.

*yp-tools-2.9 (11 Aug 2005)

  11 Aug 2005; Jeremy Huddleston <eradicator@gentoo.org>
  yp-tools-2.8.ebuild, yp-tools-2.8-r1.ebuild, +yp-tools-2.9.ebuild:
  Version bump.

*yp-tools-2.8-r1 (03 May 2005)
