@@ -1,6 +1,11 @@
 # ChangeLog for net-nds/yp-tools
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/yp-tools/ChangeLog,v 1.38 2009/09/23 19:40:57 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/yp-tools/ChangeLog,v 1.39 2009/11/18 03:06:12 jer Exp $
+
+*yp-tools-2.10 (18 Nov 2009)
+
+  18 Nov 2009; Jeroen Roovers <jer@gentoo.org> +yp-tools-2.10.ebuild:
+  Version bump.
 
   23 Sep 2009; Patrick Lauer <patrick@gentoo.org> yp-tools-2.9.ebuild:
   Remove virtual/libc
